Fix img alignment

--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ body {
 
 #card img {
            box-sixing: border-box;
-           margin-left: 20%; 
+           margin-left: 10%; 
            margin-top: 10px;
            margin-bottom: 20px;
            border: 1px solid black;
